gen/games/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-games1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/games/v1/lib)
error[E0428]: the name `PlayedWith` is defined multiple times
    --> gen/games/v1/lib/src/lib.rs:6918:13
     |
6916 |             PlayedWith,
     |             ---------- previous definition of the type `PlayedWith` here
6917 |             #[doc = "Retrieve a list of players you have played a multiplayer game (realtime or turn-based) with recently."]
6918 |             PlayedWith,
     |             ^^^^^^^^^^ `PlayedWith` redefined here
     |
     = note: `PlayedWith` must be defined only once in the type namespace of this enum

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
error: Could not compile `google-games1`.

To learn more, run the command again with --verbose.
